# langcraft

./: .gitignore  CHANGELOG.md  MANIFEST.in  main.py  models.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_pylint.yml  run_tests.yml
langcraft/: __init__.py  action.py  logging.py
langcraft/data/: models.json
langcraft/llm/: __init__.py  claude.py  gemini.py  gpt.py  llm_action.py  llm_completion.py  llm_embedding.py  llm_models.py
tests/: test_completion_action.py
